data/derived/sp14/progs/unify/prog0653.ml.out
Characters 150-154:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * int
       but an expression was expected of type 'b list
